# bMRI

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bmri_tool.mcp.json  example_code.py  issues.md  mkdocs.yml  pyproject.toml  pytest.ini  run_example.py
.claude/: settings.local.json
.github/workflows/: test.yml
__tests/unit/: report.html  report.xml
docs/: api.md  backends.md  index.md  models.md  quickstart.md  validation.md
results/: 7_T2-star_map_3D_cor_03445_offset.csv
rust/: Cargo.toml  pyproject.toml
rust/src/: expr.rs  lib.rs  nnls.rs
src/Fitting/: AbstractFitting.py  FittingMap.py  T1.py  T1rho_T2prep.py  T2_T2star.py  __init__.py  dwi.py  expression_helper.py  spectrum.py
src/Utilitis/: __init__.py  results_writer.py  utils.py
src/Visualization/: 3d_heatmap.py  image_viewer.py  show.py
src/bmri/: __init__.py  config.py  exceptions.py  logger.py  mcp_server.py  py.typed  types.py  validators.py
src/bmri/cli/: __init__.py  legacy_imports.py  main.py
src/bmri/cli/commands/: fit.py  view.py
src/bmri/core/: __init__.py
src/bmri/core/fitting/: __init__.py
src/bmri/fitting/: __init__.py
src/bmri/io/: __init__.py  readers.py
src/bmri/postprocessing/: __init__.py  texture.py
src/bmri/viewer/: __init__.py  data_loader.py  server.py
src/bmri/viewer/static/: index.html  style.css  viewer.js
test/: conftest.py  phantoms.py  test_AbstraktFitting.py  test_T1.py  test_backend_equivalence.py  test_cli_commands.py  test_cli_main.py  test_config.py  test_dwi_models.py  test_exceptions.py  test_fitting_accuracy.py  test_import_all_bmri.py  test_io_readers.py  test_logger.py  test_rust_backend.py  test_rust_integration.py  test_save_results.py  test_spectrum.py  test_validators.py  test_view_cli.py
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_0925/: 10_T2_map_cor_10282_S0.csv  10_T2_map_cor_10282_offset.csv  10_T2_map_cor_10282_t2_t2star.csv  18_T1_Images_13460PRE_value.csv  7_T2-star_map_3D_cor_03445_S0.csv  7_T2-star_map_3D_cor_03445_t2_t2star.csv  T1rho_S0.csv  T1rho_offset.csv  T1rho_t1rho.csv
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_0925/10_T2_map_cor_10282/: T2_map_cor_10282_dyn_00001.dcm  T2_map_cor_10282_dyn_00002.dcm  T2_map_cor_10282_dyn_00003.dcm  T2_map_cor_10282_dyn_00004.dcm  T2_map_cor_10282_dyn_00005.dcm  T2_map_cor_10282_dyn_00006.dcm  T2_map_cor_10282_dyn_00007.dcm  T2_map_cor_10282_dyn_00008.dcm  T2_map_cor_10282_dyn_00009.dcm  T2_map_cor_10282_dyn_00010.dcm  T2_map_cor_10282_dyn_00011.dcm  T2_map_cor_10282_dyn_00012.dcm  T2_map_cor_10282_dyn_00013.dcm  T2_map_cor_10282_dyn_00014.dcm  T2_map_cor_10282_dyn_00015.dcm  T2_map_cor_10282_dyn_00016.dcm  T2_map_cor_10282_dyn_00017.dcm  T2_map_cor_10282_dyn_00018.dcm  T2_map_cor_10282_dyn_00019.dcm  T2_map_cor_10282_dyn_00020.dcm  T2_map_cor_10282_dyn_00021.dcm  T2_map_cor_10282_dyn_00022.dcm  T2_map_cor_10282_dyn_00023.dcm  T2_map_cor_10282_dyn_00024.dcm  T2_map_cor_10282_dyn_00025.dcm  T2_map_cor_10282_dyn_00026.dcm  T2_map_cor_10282_dyn_00027.dcm  T2_map_cor_10282_dyn_00028.dcm  T2_map_cor_10282_dyn_00029.dcm  T2_map_cor_10282_dyn_00030.dcm  T2_map_cor_10282_dyn_00031.dcm  T2_map_cor_10282_dyn_00032.dcm  T2_map_cor_10282_dyn_00033.dcm  T2_map_cor_10282_dyn_00034.dcm  T2_map_cor_10282_dyn_00035.dcm  T2_map_cor_10282_dyn_00036.dcm  T2_map_cor_10282_dyn_00037.dcm  T2_map_cor_10282_dyn_00038.dcm  T2_map_cor_10282_dyn_00039.dcm  T2_map_cor_10282_dyn_00040.dcm  (+261 more)
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_0925/11_T2_Images_10330/: T2_Images_10330_dyn_00001.dcm  T2_Images_10330_dyn_00002.dcm  T2_Images_10330_dyn_00003.dcm  T2_Images_10330_dyn_00004.dcm  T2_Images_10330_dyn_00005.dcm  T2_Images_10330_dyn_00006.dcm  T2_Images_10330_dyn_00007.dcm  T2_Images_10330_dyn_00008.dcm  T2_Images_10330_dyn_00009.dcm  T2_Images_10330_dyn_00010.dcm  T2_Images_10330_dyn_00011.dcm  T2_Images_10330_dyn_00012.dcm  T2_Images_10330_dyn_00013.dcm  T2_Images_10330_dyn_00014.dcm  T2_Images_10330_dyn_00015.dcm  T2_Images_10330_dyn_00016.dcm  T2_Images_10330_dyn_00017.dcm  T2_Images_10330_dyn_00018.dcm  T2_Images_10330_dyn_00019.dcm  T2_Images_10330_dyn_00020.dcm  T2_Images_10330_dyn_00021.dcm  T2_Images_10330_dyn_00022.dcm  T2_Images_10330_dyn_00023.dcm  T2_Images_10330_dyn_00024.dcm  T2_Images_10330_dyn_00025.dcm  T2_Images_10330_dyn_00026.dcm  T2_Images_10330_dyn_00027.dcm  T2_Images_10330_dyn_00028.dcm  T2_Images_10330_dyn_00029.dcm  T2_Images_10330_dyn_00030.dcm
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_0925/12_T1rho_cor_12161/: T1rho_cor_12161_dyn_00001.dcm  T1rho_cor_12161_dyn_00002.dcm  T1rho_cor_12161_dyn_00003.dcm  T1rho_cor_12161_dyn_00006.dcm  T1rho_cor_12161_dyn_00007.dcm  T1rho_cor_12161_dyn_00008.dcm  T1rho_cor_12161_dyn_00011.dcm  T1rho_cor_12161_dyn_00012.dcm  T1rho_cor_12161_dyn_00013.dcm  T1rho_cor_12161_dyn_00015.dcm  T1rho_cor_12161_dyn_00021.dcm  T1rho_cor_12161_dyn_00022.dcm  T1rho_cor_12161_dyn_00028.dcm  T1rho_cor_12161_dyn_00030.dcm  T1rho_cor_12161_dyn_00033.dcm  T1rho_cor_12161_dyn_00037.dcm  T1rho_cor_12161_dyn_00038.dcm  T1rho_cor_12161_dyn_00039.dcm  T1rho_cor_12161_dyn_00041.dcm  T1rho_cor_12161_dyn_00044.dcm  T1rho_cor_12161_dyn_00046.dcm  T1rho_cor_12161_dyn_00047.dcm  T1rho_cor_12161_dyn_00049.dcm  T1rho_cor_12161_dyn_00051.dcm  T1rho_cor_12161_dyn_00053.dcm  T1rho_cor_12161_dyn_00054.dcm  T1rho_cor_12161_dyn_00056.dcm  T1rho_cor_12161_dyn_00059.dcm  T1rho_cor_12161_dyn_00060.dcm  T1rho_cor_12161_dyn_00061.dcm  T1rho_cor_12161_dyn_00064.dcm
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_0925/13_T1rho_cor_12161/: T1rho_cor_12161_dyn_00001.dcm  T1rho_cor_12161_dyn_00003.dcm  T1rho_cor_12161_dyn_00004.dcm  T1rho_cor_12161_dyn_00005.dcm  T1rho_cor_12161_dyn_00009.dcm  T1rho_cor_12161_dyn_00010.dcm  T1rho_cor_12161_dyn_00012.dcm  T1rho_cor_12161_dyn_00014.dcm  (+29 more)
test/resources/Mrtc-Studie_Cartilage_transplantation_05_GAPF97478/20211125_1206/: 6_T1_Images_34342POST_value.csv
(+4193 files in other folders)
