[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bMRI"
version = "0.3.0"
description = "Quantitative MRI analysis: per-voxel T1/T2/T2*/T1rho fitting with a Rust backend, ROI statistics, GLCM textures, and a web viewer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ludger Radke", email = "ludger.radke@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.20.0,<2.0",
    "scipy>=1.7.0",
    "numba>=0.59.0",
    "pandas>=1.3.0",
    # Medical imaging
    "pydicom>=2.2.0",
    "python-gdcm>=3.0.0",
    "nibabel>=3.2.0",
    "dicom2nifti>=2.3.0",
    "GoNifti @ https://github.com/MPR-UKD/GoNifti/raw/main/dist/GoNifti-0.3-py3-none-any.whl#sha256=ded788fb08dad94b6f86edcef73f90429fb7bb993a8d75048f1dbd18b51c90ed",
    "scikit-image>=0.18.0",
    "PyWavelets>=1.1.0",
    "matplotlib>=3.4.0",
    "typer[all]>=0.20.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "tomli>=2.3.0",
    "natsort>=8.4.0",
    "openpyxl>=3.1.5",
    "rich>=13.0.0",
    "tqdm>=4.60.0",
    "maskregistration",
]

[project.optional-dependencies]
viewer = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "Pillow>=9.0",
]

qt = [
    "PyQt5>=5.15.0",
    "pyvista>=0.32.0",
    "vtk>=9.0.0",
    "ipyvolume>=0.6.0",
    "ipywidgets>=7.6.0",
    "pythreejs>=2.3.0",
    "ipywebrtc>=0.6.0",
]

mcp = [
    "mcp>=1.0.0",
    "sse-starlette>=2.1.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=4.0.0",
    "pytest-metadata>=3.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

all = [
    "bMRI[viewer,qt,mcp,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ludgerradke/bMRI"
Repository = "https://github.com/ludgerradke/bMRI"
Issues = "https://github.com/ludgerradke/bMRI/issues"

[project.scripts]
bmri = "bmri.cli.main:cli_entry_point"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "bmri",
    "bmri.cli",
    "bmri.cli.commands",
    "bmri.core",
    "bmri.core.fitting",
    "bmri.fitting",
    "bmri.io",
    "bmri.utils",
    "bmri.viewer",
    "bmri.postprocessing",
]

[tool.setuptools.package-data]
bmri = ["py.typed"]
"bmri.viewer" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--cov=src/bmri",
    "--cov-report=term-missing",
    "--cov-report=html:__tests/unit/coverage",
]

[tool.coverage.run]
source = ["src/bmri"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "src/bMRI.egg-info",
    "src/Visualization",
    "__tests",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "E402",  # module imports not at top (path hacks)
    "B008",  # function calls in argument defaults (typer pattern)
    "B904",  # raise from inside except
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["src/bmri"]

[tool.uv.sources]
maskregistration = { path = "../MaskRegistration", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
]
